--- a/index.html
+++ b/index.html
@@ -1,65 +1,67 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Migiro_Johans_portfolio</title>
- </head>
- <body>
-    <h1 Center>Migiro Software Portofolio</h1>
-    <h2> I am a Developer </h2>
-    <hr/>
-    <a href="./public/movie-ranking.html">Movie Making project </a>
-    <h2>The best movies according to Johans Migiro</h2>
-    <h3>My best three movies include</h3>
-    <ul>
-        <li>Money Heist </li>
+    <title>My Resume</title>
+</head>
+<body>
+    <nav>
+        <a href="./index.html">Home </a><br>
+        <a href="./contacts.html">Contacts</a><br>
+        <a href="./hobbies.html">Hobbies</a>
+    </nav>
+    <img src="./potrait.jpeg" height = "200" alt="Portrait">
 
-        <li>Money Heist</li>
-        <li>Money Heist</li>
-        <li>Money Heist</li>
-        <li>Money Heist</li>
-    </ul>
+    <h1 >SUMMARY</h1>
+    <h2>
+    <p>My name is Migiro Johans Nyogora. I am a software developer with fullstack skills</p>
+    <p>I have been working in the software development industry for the last 2 years</p>
+    <p>I am proficient in Javascript, frameworks such as Node.js, react and have taken a keen interest on databases using Postgress sql and sql</p>
+    <p>I have also experience in as an information technology specialist working with Information technology infrastructure to provide solutions to businesses.</p>
+    </h2>
+    <hr>
+    <h1>EDUCATION</h1>
+    <h2>
+        <p>I am an alumini of Kisii High school where I finished my secondary exams and execeled in sciences and art and design</p>
+        <p>I Join Jomo Kenyatta univiersty were i pursued Mathematics, physics and electronics</p>
+        <P>I later joined African leadership univeristy under the program Alx to major on Software Engineering</P>
+        <p>I am currently enrolled on bootcamp with Udemy to sharpen my skills in fullstack development</p>
+    </h2>
+    <hr>
+    <h1>Work experience</h1>
+    <ol>
+        <li> <strong>Information technology generalist</strong> </li>
+        <p><h3>Installed, configured, deployed all the technology resources for <strong>House of procurement limited</strong></h3></p>
+        <li><strong>system analyst</strong></li>
+        <p><h3>Configured , performed daily maintenance for a banking system for <strong >meridian acceptances limited</strong></h3></p>
 
-    <a href="./public/birthday-invite.html">Birthday invite</a>
-    <h1>It's My Birthday!</h1>
-<h2>On the 21th October</h2>
+    </ol>
+    <hr>
+    <h1>SKILLS </h1>
+    <ol>
+        <li>Python programming - developing ApIs used in Banking systems</li>
+        <li>Javascript programming to develop authentic ecommerce websites for my clients</li>
+        <li>Network devops - installiing and configuring network infrastructure for homes and businesses</li>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
-
-<h3>What to bring:</h3>
-<ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
-</ul>
-
-<h3>This is where you need to go:</h3>
-<a
-  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a>
-
-  <hr/>
-  <a href="./public/about.html" >About me </a>
-  <a href="./public/contact.html" >Contact info</a>
-
+    </ol>
+    <hr>
+    <h1>Awards/ certificates </h1>
+    <ol>
+        <li>Bachelors degree - control systems Engineering</li>
+        <li>Google certificate- Fundamentals of Information technology support</li>
+        <li>African leadership group - Foundation course career development </li>
+        <li>Certifacte of completion from coursera - on information systems control and assurance</li>
+    </ol>
+    <hr>
+    <a href="./hobbies.html">Hobbies</a>
+    <a href="./contacts.html">Contacts</a>
+    <footer>
+        <small>
+          Copyright © 2024 Migiro Johans. All Rights Reserved.
+        </small>
+      </footer>
 
     
- </body>
- </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</body>
+</html>
